--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,37 @@
   text-align: center;
 }
 
+.App-title {
+  background-color: #4f9a94;
+  margin-bottom: auto;
+  margin-top: auto;
+  padding: 20px;
+  border-bottom: 1px solid black;
+}
+
 .sidebarContainer {
-width: 25%;
+width: 27%;
 float: left;
 top: 0px;
 height: 1018px;
 background-color: #80cbc4;
-position: relative; 
+position: relative;
 
+}
+
+.createNewRoom{
+  border-top: 1px solid black;
+  font-weight: bold;
+}
+.createRoom {
+  background-color: #4f9a94;
+  border: 1px solid black;
+  color: #b2fef7;
+  padding: 10px 20px;
+  margin: 6px 2px;
+  cursor: pointer;
+}
+.textBox {
+  border: 1px solid black;
+  float: center;
 }
